--- a/templates/index.html
+++ b/templates/index.html
@@ -41,14 +41,6 @@
   <div class="row">
     <div class="col-sm">
       <div class="message-container">
-        <!-- This is just temporary until we figure out AJAX -->
-        {% for msg in messages %}
-        <div class="msg">
-          <div class="username">{{ msg.username }}</div>
-          <div class="content">{{ msg.content }}</div>
-          <div class="timestamp">{{ msg.when_created }}</div>
-        </div>
-        {% endfor %}
       </div>
       <form id="message-input">
         <div class="card send-form">
@@ -65,6 +57,34 @@
   </div>
 </div>
 <script type="text/javascript">
+  var msgTemplate = `
+    <div class="msg">
+      <div class="username"></div>
+      <div class="content"></div>
+      <div class="timestamp"></div>
+    </div>`;
+  var loadMessages = function() {
+    $.get({
+      // TODO render this URL with jinja / flask
+      url: '/api/messages',
+    }).done(function(response) {
+      // Wipe existing messages
+      var messageContainer = $('.message-container');
+      messageContainer.empty();
+
+      $.each(response.results, function(idx, msg) {
+        var newElem = $(msgTemplate);
+        newElem.find('.username').text(msg.username);
+        newElem.find('.content').text(msg.content);
+        newElem.find('.timestamp').text(msg.when_created);
+        messageContainer.append(newElem);
+      });
+    });
+  };
+
+  $(document).ready(function() {
+    loadMessages();
+  });
   $('#message-input').submit(function() {
     const form = $(this);
     $.ajax({
@@ -72,8 +92,11 @@
       // TODO render this URL with jinja / flask
       url: '/api/messages',
       data: form.serialize(),
+    }).done(function() {
+      // Wow it's weird you can't use .empty() here.
+      form.find('[name=content]').val('');
+      loadMessages();
     });
-    // TODO: chain the success and reload messages.
     return false;
   });
 </script>
